@@ -2,6 +2,7 @@
 
 	* Added a new TSFE hook to force user groups for pages and content
 	* Added a user group field to the indexing configuration record
+	* Added a hook to exclude tx_mnogosearch_gid from cHash parameters
 
 2009-10-20  Dmitry Dulepov  <dmitry@typo3.org>
 
